Added reverb, though still bugs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Welcome To Moon Prison</title>
     <link href="stylesheet.css" rel="stylesheet" />
     <script src="./assets/jquery.min.js"></script>
+    <script src="./assets/tuna-min.js"></script>
     <script src="main.js"></script>
   </head>
   <body id="bckgrnd">
