Made the mechanics more modular

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <script src="main.js"></script>
   </head>
   <body id="bckgrnd">
-      <div id="txtDiv"></div>
+      <div id="txtDiv">
+          <div id="wrapper"></div>
+      </div>
       <div id="ansDiv"></div>
   </body>
 </html>
